<resources>

    <!-- COMMON STRINGS -->
    <string name="app_name">GPS</string>
    <string name="map_source">Google Maps</string>

    <!-- DRAWER ACTIONS -->
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="navigation_drawer_title_other">Other</string>

    <string name="navigation_drawer_home">Home</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_about">About</string>

    <!-- ACCURACY CHART -->
    <string name="accuracy_chart_title">Accuracy chart</string>
    <string name="accuracy_chart_axis_y_label">Accuracy</string>
    <string name="accuracy_chart_axis_x_label">Locations</string>

    <!-- SETTINGS -->
    <string name="settings_refresh_rate_title">Refresh rate</string>
    <string name="settings_refresh_rate_summary">Location refresh rate in minutes</string>
    <string name="settings_route_line_color_title">Route line color</string>
    <string name="settings_route_line_width_title">Route line width</string>

    <string name="settings_route_line_color_black">Black</string>
    <string name="settings_route_line_color_red">Red</string>
    <string name="settings_route_line_color_green">Green</string>
    <string name="settings_route_line_color_blue">Blue</string>

    <!-- ABOUT -->
    <string name="about_dialog_message">GPS by Jakub Turcovsky\nApplication version: %s</string>

    <!-- PERMISSIONS INFO -->
    <string name="permission_info_access_coarse_location_title">Access location</string>
    <string name="permission_info_access_coarse_location_message">In order to show you your running paths the app needs you to enable access to device\'s location.</string>

    <!-- MAP -->
    <string name="map_menu_show_position">Show position</string>
    <string name="map_marker_title">Position %d</string>
    <string name="map_marker_snippet">Latitude: %1$s\nLongitude: %2$s\nAccuracy: %3$s\nTime: %4$s\nSource: %5$s\n</string>
    <string name="map_dialog_show_position_title">Show border position of the trip</string>
    <string name="map_empty_trip">First start your trip</string>
    <string name="cardinal_direction_north">Northernmost</string>
    <string name="cardinal_direction_south">Southernmost</string>
    <string name="cardinal_direction_east">Easternmost</string>
    <string name="cardinal_direction_west">Westernmost</string>

    <!-- ERROR DIALOGS -->
    <string name="location_off_dialog_title">Location services off</string>
    <string name="location_off_dialog_message">Please turn on location services</string>

    <!-- ERRORS -->
    <string name="error_missing_location_services">No location services</string>

</resources>
