<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/navigation_drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_home_24dp"/>

    </group>

    <item android:title="@string/navigation_drawer_title_other">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/navigation_drawer_settings"
                    android:icon="@drawable/ic_settings_24dp"/>

                <item
                    android:id="@+id/nav_about"
                    android:title="@string/navigation_drawer_about"
                    android:icon="@drawable/ic_info_24dp"/>

            </group>

        </menu>

    </item>

</menu>