<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:id="@+id/refresh_rate"
        android:title="@string/settings_refresh_rate_title"
        android:summary="@string/settings_refresh_rate_summary"
        android:inputType="number"
        android:defaultValue="3"
        android:key="pref_acquire_location_period"/>

    <ListPreference
        android:title="@string/settings_route_line_color_title"
        android:defaultValue="-16777216"
        android:entries="@array/route_line_color"
        android:entryValues="@array/route_line_color_values"
        android:key="pref_route_line_color"/>

    <EditTextPreference
        android:id="@+id/route_line_width"
        android:title="@string/settings_route_line_width_title"
        android:inputType="number"
        android:defaultValue="10"
        android:key="pref_route_line_width"/>

</PreferenceScreen>